Adding cognito-idp:TagResource permission to the User Service to keep up with changes made by the Cognito team.

--- a/resources/user-service.yml
+++ b/resources/user-service.yml
@@ -299,6 +299,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - cognito-idp:CreateUserPool
+                  - cognito-idp:TagResource
                 Resource: '*'
               - Effect: Allow
                 Action:
