--- a/source/web-client/package.json
+++ b/source/web-client/package.json
@@ -12,45 +12,45 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.1.2",
-    "grunt-google-cdn2": "0.6.0",
-    "grunt-jscs": "^1.8.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^0.9.2",
-    "grunt-postcss": "^0.5.5",
-    "grunt-svgmin": "^2.0.0",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
-    "jasmine-core": "^2.5.2",
-    "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^1.4.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    "time-grunt": "^1.0.0"
+    "autoprefixer-core": "latest",
+    "grunt": ">=1.3.0",
+    "grunt-angular-templates": "latest",
+    "grunt-concurrent": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-connect": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-htmlmin": "latest",
+    "grunt-contrib-imagemin": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-filerev": "latest",
+    "grunt-google-cdn2": "latest",
+    "grunt-jscs": "latest",
+    "grunt-newer": "latest",
+    "grunt-ng-annotate": "latest",
+    "grunt-postcss": "latest",
+    "grunt-svgmin": "latest",
+    "grunt-usemin": "latest",
+    "grunt-wiredep": "latest",
+    "jasmine-core": "latest",
+    "jit-grunt": "latest",
+    "jshint-stylish": "latest",
+    "karma": "latest",
+    "karma-jasmine": "latest",
+    "karma-phantomjs-launcher": "latest",
+    "phantomjs-prebuilt": "latest",
+    "time-grunt": "latest"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=10"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
   },
   "dependencies": {
-    "grunt-cli": "^1.3.2"
+    "grunt-cli": ">=1.3.0"
   }
 }
