--- a/resources/web-client.yml
+++ b/resources/web-client.yml
@@ -8,9 +8,6 @@ Parameters:
   WebsiteBucket:
     Description: The S3 bucket to host the web client from
     Type: String
-  WebsiteBucketWebsiteURL:
-    Description: The WebsiteBucket WebsiteURL attribute
-    Type: String
   CodeBuildRoleArn:
     Description: The CodeBuild IAM role ARN
     Type: String
@@ -21,6 +18,11 @@ Parameters:
     Description: API Gateway endpoint URL in front of the microservices
     Type: String
 Resources:
+  ConsoleOriginAccessIdentity:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: !Sub access-identity-${WebsiteBucket}
   CloudFrontDistribution:
     Type: AWS::CloudFront::Distribution
     Properties:
@@ -31,17 +33,26 @@ Resources:
         HttpVersion: http2
         Origins:
           - Id: !Sub S3-Website-${WebsiteBucket}
-            DomainName: !Select [1, !Split ["http://", !Ref WebsiteBucketWebsiteURL]]
-            CustomOriginConfig:
-              OriginProtocolPolicy: http-only
-              OriginSSLProtocols: ['TLSv1', 'TLSv1.1', 'TLSv1.2']
+            DomainName: !Sub ${WebsiteBucket}.s3.${AWS::Region}.amazonaws.com
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${ConsoleOriginAccessIdentity}
         CustomErrorResponses:
           - ErrorCode: 403
             ResponseCode: 200
             ResponsePagePath: /index.html
         DefaultCacheBehavior:
-          AllowedMethods: [GET,HEAD,OPTIONS]
-          CachedMethods: [GET,HEAD,OPTIONS]
+          AllowedMethods:
+            - DELETE
+            - GET
+            - HEAD
+            - OPTIONS
+            - PATCH
+            - POST
+            - PUT
+          CachedMethods:
+            - GET
+            - HEAD
+            - OPTIONS
           TargetOriginId: !Sub S3-Website-${WebsiteBucket}
           ViewerProtocolPolicy: redirect-to-https
           Compress: true
@@ -51,6 +62,28 @@ Resources:
               - Access-Control-Request-Headers
               - Access-Control-Request-Method
             QueryString: false
+  WebBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket:
+        !Ref WebsiteBucket
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              CanonicalUser:
+                !GetAtt ConsoleOriginAccessIdentity.S3CanonicalUserId
+            Action: s3:GetObject
+            Resource: !Sub arn:aws:s3:::${WebsiteBucket}/*
+          - Effect: Deny
+            Action: s3:*
+            Principal: '*'
+            Resource:
+              - !Sub arn:aws:s3:::${WebsiteBucket}/*
+              - !Sub arn:aws:s3:::${WebsiteBucket}
+            Condition:
+              Bool: {'aws:SecureTransport': false}
   CodeBuildLogs:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -97,7 +130,7 @@ Resources:
                 - cd ../
             post_build:
               commands:
-                - aws s3 sync --delete --cache-control no-store --acl public-read ./web-client/dist/ s3://$WEBSITE_BUCKET/
+                - aws s3 sync --delete --cache-control no-store ./web-client/dist/ s3://$WEBSITE_BUCKET/
   InvokeLambdaCodeBuildStartBuild:
     Type: Custom::CustomResource
     DependsOn:
